cbits/Bullet.h

// attribute not supported: //attribute: ::btGjkEpaSolver2::sResults::eStatus btGjkEpaSolver2_sResults->status
// attribute not supported: //attribute: ::btVector3[2] btGjkEpaSolver2_sResults->witnesses
void* btCollisionWorld_AllHitsRayResultCallback_new(float* p0,float* p1); //constructor: AllHitsRayResultCallback  ( ::btCollisionWorld::AllHitsRayResultCallback::* )( ::btVector3 const &,::btVector3 const & ) 
void btCollisionWorld_AllHitsRayResultCallback_free(void *c);
 
float btCollisionWorld_AllHitsRayResultCallback_addSingleResult(void *c,void* p0,int p1); //method: addSingleResult ::btScalar ( ::btCollisionWorld::AllHitsRayResultCallback::* )( ::btCollisionWorld::LocalRayResult &,bool ) 
void btCollisionWorld_AllHitsRayResultCallback_m_collisionObjects_set(void *c,void* a); //attribute: ::btAlignedObjectArray<btCollisionObject*> btCollisionWorld_AllHitsRayResultCallback->m_collisionObjects
void* btCollisionWorld_AllHitsRayResultCallback_m_collisionObjects_get(void *c); //attribute: ::btAlignedObjectArray<btCollisionObject*> btCollisionWorld_AllHitsRayResultCallback->m_collisionObjects
void btCollisionWorld_AllHitsRayResultCallback_m_hitFractions_set(void *c,void* a); //attribute: ::btAlignedObjectArray<float> btCollisionWorld_AllHitsRayResultCallback->m_hitFractions
void* btCollisionWorld_AllHitsRayResultCallback_m_hitFractions_get(void *c); //attribute: ::btAlignedObjectArray<float> btCollisionWorld_AllHitsRayResultCallback->m_hitFractions
void btCollisionWorld_AllHitsRayResultCallback_m_hitNormalWorld_set(void *c,void* a); //attribute: ::btAlignedObjectArray<btVector3> btCollisionWorld_AllHitsRayResultCallback->m_hitNormalWorld
void* btCollisionWorld_AllHitsRayResultCallback_m_hitNormalWorld_get(void *c); //attribute: ::btAlignedObjectArray<btVector3> btCollisionWorld_AllHitsRayResultCallback->m_hitNormalWorld
void btCollisionWorld_AllHitsRayResultCallback_m_hitPointWorld_set(void *c,void* a); //attribute: ::btAlignedObjectArray<btVector3> btCollisionWorld_AllHitsRayResultCallback->m_hitPointWorld
void* btCollisionWorld_AllHitsRayResultCallback_m_hitPointWorld_get(void *c); //attribute: ::btAlignedObjectArray<btVector3> btCollisionWorld_AllHitsRayResultCallback->m_hitPointWorld
void btCollisionWorld_AllHitsRayResultCallback_m_rayFromWorld_set(void *c,float* a); //attribute: ::btVector3 btCollisionWorld_AllHitsRayResultCallback->m_rayFromWorld
void btCollisionWorld_AllHitsRayResultCallback_m_rayFromWorld_get(void *c,float* a);
void btCollisionWorld_AllHitsRayResultCallback_m_rayToWorld_set(void *c,float* a); //attribute: ::btVector3 btCollisionWorld_AllHitsRayResultCallback->m_rayToWorld
void btCollisionWorld_AllHitsRayResultCallback_m_rayToWorld_get(void *c,float* a);
void* btCollisionWorld_ClosestConvexResultCallback_new(float* p0,float* p1); //constructor: ClosestConvexResultCallback  ( ::btCollisionWorld::ClosestConvexResultCallback::* )( ::btVector3 const &,::btVector3 const & ) 
void btCollisionWorld_ClosestConvexResultCallback_free(void *c);
 
float btCollisionWorld_ClosestConvexResultCallback_addSingleResult(void *c,void* p0,int p1); //method: addSingleResult ::btScalar ( ::btCollisionWorld::ClosestConvexResultCallback::* )( ::btCollisionWorld::LocalConvexResult &,bool ) 
void btCollisionWorld_ClosestConvexResultCallback_m_convexFromWorld_set(void *c,float* a); //attribute: ::btVector3 btCollisionWorld_ClosestConvexResultCallback->m_convexFromWorld
void btCollisionWorld_ClosestConvexResultCallback_m_convexFromWorld_get(void *c,float* a);
void btCollisionWorld_ClosestConvexResultCallback_m_convexToWorld_set(void *c,float* a); //attribute: ::btVector3 btCollisionWorld_ClosestConvexResultCallback->m_convexToWorld
void btCollisionWorld_ClosestConvexResultCallback_m_convexToWorld_get(void *c,float* a);
void btCollisionWorld_ClosestConvexResultCallback_m_hitCollisionObject_set(void *c,void* a); //attribute: ::btCollisionObject * btCollisionWorld_ClosestConvexResultCallback->m_hitCollisionObject
void* btCollisionWorld_ClosestConvexResultCallback_m_hitCollisionObject_get(void *c); //attribute: ::btCollisionObject * btCollisionWorld_ClosestConvexResultCallback->m_hitCollisionObject
void btCollisionWorld_ClosestConvexResultCallback_m_hitNormalWorld_set(void *c,float* a); //attribute: ::btVector3 btCollisionWorld_ClosestConvexResultCallback->m_hitNormalWorld