Physics/Bullet/Raw/BulletCollision/CollisionDispatch.chs

{-#LANGUAGE ForeignFunctionInterface#-}
#include "Bullet.h"
module Physics.Bullet.Raw.BulletCollision.CollisionDispatch (
module Physics.Bullet.Raw.BulletCollision.CollisionDispatch
) where
import Control.Monad
import Foreign.Marshal.Alloc
import Foreign.ForeignPtr.Unsafe
import Foreign.Ptr
import Physics.Bullet.Raw.C2HS
import Physics.Bullet.Raw.Types
import Physics.Bullet.Raw.Class
-- * AllHitsRayResultCallback
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#269>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_AllHitsRayResultCallback_new as btCollisionWorld_AllHitsRayResultCallback    {  withVec3* `Vec3' , withVec3* `Vec3'  } -> `BtCollisionWorld_AllHitsRayResultCallback' mkBtCollisionWorld_AllHitsRayResultCallback* #}
{#fun btCollisionWorld_AllHitsRayResultCallback_free    `( BtCollisionWorld_AllHitsRayResultCallbackClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#284>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_AllHitsRayResultCallback_addSingleResult as btCollisionWorld_AllHitsRayResultCallback_addSingleResult    `( BtCollisionWorld_AllHitsRayResultCallbackClass bc , BtCollisionWorld_LocalRayResultClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ rayResult
,  `Bool'  -- ^ normalInWorldSpace
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#275>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_AllHitsRayResultCallback_m_collisionObjects_set    `( BtCollisionWorld_AllHitsRayResultCallbackClass bc , BtAlignedObjectArray_btCollisionObject_ptr_Class a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#275>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_AllHitsRayResultCallback_m_collisionObjects_get    `( BtCollisionWorld_AllHitsRayResultCallbackClass bc )' =>     { withBt* `bc'  } ->  `BtAlignedObjectArray_btCollisionObject_ptr_'  mkBtAlignedObjectArray_btCollisionObject_ptr_* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#282>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_AllHitsRayResultCallback_m_hitFractions_set    `( BtCollisionWorld_AllHitsRayResultCallbackClass bc , BtAlignedObjectArray_float_Class a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#282>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_AllHitsRayResultCallback_m_hitFractions_get    `( BtCollisionWorld_AllHitsRayResultCallbackClass bc )' =>     { withBt* `bc'  } ->  `BtAlignedObjectArray_float_'  mkBtAlignedObjectArray_float_* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#280>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_AllHitsRayResultCallback_m_hitNormalWorld_set    `( BtCollisionWorld_AllHitsRayResultCallbackClass bc , BtAlignedObjectArray_btVector3_Class a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#280>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_AllHitsRayResultCallback_m_hitNormalWorld_get    `( BtCollisionWorld_AllHitsRayResultCallbackClass bc )' =>     { withBt* `bc'  } ->  `BtAlignedObjectArray_btVector3_'  mkBtAlignedObjectArray_btVector3_* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#281>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_AllHitsRayResultCallback_m_hitPointWorld_set    `( BtCollisionWorld_AllHitsRayResultCallbackClass bc , BtAlignedObjectArray_btVector3_Class a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#281>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_AllHitsRayResultCallback_m_hitPointWorld_get    `( BtCollisionWorld_AllHitsRayResultCallbackClass bc )' =>     { withBt* `bc'  } ->  `BtAlignedObjectArray_btVector3_'  mkBtAlignedObjectArray_btVector3_* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#277>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_AllHitsRayResultCallback_m_rayFromWorld_set    `( BtCollisionWorld_AllHitsRayResultCallbackClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#277>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_AllHitsRayResultCallback_m_rayFromWorld_get    `( BtCollisionWorld_AllHitsRayResultCallbackClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#278>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_AllHitsRayResultCallback_m_rayToWorld_set    `( BtCollisionWorld_AllHitsRayResultCallbackClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#278>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_AllHitsRayResultCallback_m_rayToWorld_get    `( BtCollisionWorld_AllHitsRayResultCallbackClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
-- * ClosestConvexResultCallback
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#367>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestConvexResultCallback_new as btCollisionWorld_ClosestConvexResultCallback    {  withVec3* `Vec3' , withVec3* `Vec3'  } -> `BtCollisionWorld_ClosestConvexResultCallback' mkBtCollisionWorld_ClosestConvexResultCallback* #}
{#fun btCollisionWorld_ClosestConvexResultCallback_free    `( BtCollisionWorld_ClosestConvexResultCallbackClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#381>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestConvexResultCallback_addSingleResult as btCollisionWorld_ClosestConvexResultCallback_addSingleResult    `( BtCollisionWorld_ClosestConvexResultCallbackClass bc , BtCollisionWorld_LocalConvexResultClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ convexResult
,  `Bool'  -- ^ normalInWorldSpace
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#374>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestConvexResultCallback_m_convexFromWorld_set    `( BtCollisionWorld_ClosestConvexResultCallbackClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#374>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestConvexResultCallback_m_convexFromWorld_get    `( BtCollisionWorld_ClosestConvexResultCallbackClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#375>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestConvexResultCallback_m_convexToWorld_set    `( BtCollisionWorld_ClosestConvexResultCallbackClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#375>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestConvexResultCallback_m_convexToWorld_get    `( BtCollisionWorld_ClosestConvexResultCallbackClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#379>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestConvexResultCallback_m_hitCollisionObject_set    `( BtCollisionWorld_ClosestConvexResultCallbackClass bc , BtCollisionObjectClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#379>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestConvexResultCallback_m_hitCollisionObject_get    `( BtCollisionWorld_ClosestConvexResultCallbackClass bc )' =>     { withBt* `bc'  } ->  `BtCollisionObject'  mkBtCollisionObject* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#377>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ClosestConvexResultCallback_m_hitNormalWorld_set    `( BtCollisionWorld_ClosestConvexResultCallbackClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
